# RPS.CSR/Models/Settings.cs
@@ -1,0 +1,9 @@
+﻿namespace RPS.CSR.Models {
+    public class Settings {
+        public int Id { get; set; }
+
+        public string? SerialPortName { get; set; }
+
+        public int SerialPortSpeed { get; set; }
+    }
+}
